--- a/index.html
+++ b/index.html
@@ -58,21 +58,75 @@
   <!-- #region hiro -->
    <section>
         <h1>Welcome to our collection of premium watches</h1>
-        <img src="./images/image (1).png"
+        <img src="./images/piople.png"
          width: 146px;
          height: 60px;
-          alt="">
+          alt="piople">
         <p>Our watches are not just timepieces, but also an expression of your personality and lifestyle. From classic designs to modern ones, we have a watch to suit every taste and occasion.</p>
     <a href="./images/">Scroll down</a>
 
-    <img src="./images/Rectangle .png"
+    <img src="./images/watches.png"
         width: 1150px;
-        height: 500px; alt="Rectangle">
+        height: 500px; alt="watches">
   </section>
     <!-- #endregion hiro -->
 
      <!-- #region About Us -->
-      
+      <h2>About Us</h2>
+      <p>Welcome to our premium watch collection, where luxury and style meet functionality and precision. Our selection of timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll always have a reliable and stylish accessory on your wrist.
+At our premium watch collection, we believe that a watch is more than just a timekeeping device – it's a statement piece that reflects your personality and style. So why settle for anything less than the best? </p>
+     <button>View catalog</button>
+     <img src="./images/About Us.png" alt="About Us">
+        <!-- #endregion About Us -->
+         <!-- #region Catalog -->
+          <h2>Catalog</h2>
+          <ul>
+            <li>
+              <img src="./images/Garmin1.png" alt="Garmin1">
+              width: 292px;
+              height: 292px;
+              <h3>Garmin Fenix 7X Pro Sapphire Solar </h3>
+              <p>€500</p>
+            </li>
+            <li>
+              <img src="./images/Garmin2.png" alt="Garmin2">
+              width: 292px;
+              height: 292px;
+              <h3>Garmin Marq Athlete </h3>
+              <p>€450</p>
+            </li>
+            <li>
+              <img src="./images/Garmin3.png" alt="Garmin3">
+              width: 292px;
+              height: 292px;
+              <h3>Garmin Descent MK1 </h3>
+              <p>€680</p>
+            </li>
+            <li>
+              <img src="./images/Garmin4.png" alt="Garmin4">
+              width: 292px;
+              height: 292px;
+              <h3>Garmin D2 Delta PX</h3>
+              <p>€380</p>
+            </li>
+            <li>
+              <img src="./images/Garmin5.png" alt="Garmin5">
+              width: 292px;
+              height: 292px;
+              <h3>Garmin Fenix 6 Pro Solar</h3>
+              <p>€400</p>
+            </li>
+            <li>
+              <img src="./images/Garmin6.png" alt="Garmin6">
+              width: 292px;
+              height: 292px;
+              <h3>Tube Watch S42 Date Steel With Black Case</h3>
+              <p>€395</p>
+            </li>
+          </ul>
+
+
+         <!-- #end Catalog -->
     </main>
 
     <footer></footer>
