--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>watche-charm</title>
   </head>
   <body>
-    <!-- #region header -->
+     <!-- #region header -->
     <header>
       <a href="./index.html">Watche-charm</a>
       <nav>
@@ -53,9 +53,9 @@
       </ul>
     </header>
 <!-- #endregion header -->
-   <!-- #region main -->
-<main>
-  <!-- #region hiro -->
+     <!-- #region main -->
+  <main>
+     <!-- #region hiro -->
    <section>
         <h1>Welcome to our collection of premium watches</h1>
         <img src="./images/piople.png"
@@ -74,11 +74,12 @@
      <!-- #region About Us -->
       <h2>About Us</h2>
       <p>Welcome to our premium watch collection, where luxury and style meet functionality and precision. Our selection of timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll always have a reliable and stylish accessory on your wrist.
-At our premium watch collection, we believe that a watch is more than just a timekeeping device – it's a statement piece that reflects your personality and style. So why settle for anything less than the best? </p>
+          At our premium watch collection, we believe that a watch is more than just a timekeeping device – it's a statement piece that reflects your personality and style. So why settle for anything less than the best? </p>
      <button>View catalog</button>
      <img src="./images/About Us.png" alt="About Us">
         <!-- #endregion About Us -->
-         <!-- #region Catalog -->
+     
+        <!-- #region Catalog -->
           <h2>Catalog</h2>
           <ul>
             <li>
@@ -124,9 +125,46 @@ At our premium watch collection, we believe that a watch is more than just a tim
               <p>€395</p>
             </li>
           </ul>
+         <!-- #endregion Catalog -->
 
+        <!-- #region Sale -->
+        <section>
+          <h2>Sale</h2>
+                <ul>
+                  <li><img src="./images/Sale1.png" alt="Sale1"
+                    width: 96px;
+                    height: 100px;></li>
+                  <li><img src="./images/Sale2.png" alt="Sale2"
+                    width: 96px;
+                    height: 100px;></li>
+                  <li><img src="./images/Sale3.png" alt="Sale3"
+                    width: 96px;
+                    height: 100px;></li>
+                  <li><img src="./images/Sale4.png" alt="Sale4"
+                    width: 96px;
+                    height: 100px;></li>
+                </ul>
+              <img src="./images/Sale5.png" alt="Sale5">
+              width: 328px;
+              height: 398px;
 
-         <!-- #end Catalog -->
+              <h3>MARQ&reg; Commander (Gen 2) - Carbon Edition</h3>
+              <p>Product tag: 706587</p>
+              <p>€1500</p>
+              <span>€3000</span>
+
+              <p>The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers that takes materials and features to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a precise AMOLED touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions. </p>
+
+              <ul>
+                <li>Fused carbon fiber</li>
+                <li>Grade-5 Titanuim</li>
+                <li>Athlete</li>
+                <li>Golfer</li>
+                <li>Commander</li>
+                <li>Adventurer</li>
+              </ul>
+       </section>
+        <!-- #endregion Sale -->
     </main>
 
     <footer></footer>
